corrected spacing in about section

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -5,35 +5,10 @@
   padding: 2rem;
 }
 
-<<<<<<< HEAD
-.row-about {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 2rem;
-}
-
-.button-skill {
-  background: rgb(2, 0, 36);
-  background: linear-gradient(
-    90deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(175, 175, 186, 1) 0%,
-    rgba(0, 84, 255, 0.9514180672268907) 38%
-  );
-  padding: 1rem;
-
-  border-radius: 1rem;
-  color: #fff;
-  font-weight: bold;
-  cursor: pointer;
-=======
 .a {
   text-decoration: none;
   color: #fff;
   font-size: 1.5rem;
->>>>>>> origin/contact-refactor
 }
 
 .btn {
@@ -61,10 +36,10 @@ ul {
 }
 
 .image {
-  width: 45dvw;
+  width: 50dvw;
   height: 100%;
   border-radius: 1rem;
-  object-fit: fit;
+  object-fit: cover;
 }
 
 .about-text {
@@ -107,55 +82,3 @@ ul {
     margin: 0;
   }
 }
-<<<<<<< HEAD
-
-@media (max-width: 576px) {
-  .about-container {
-    height: 100vh;
-  }
-  .about-text {
-    font-size: 1.25rem;
-    width: 100%;
-    padding: 0;
-  }
-  .about {
-    height: 100vh;
-    padding: 0;
-    margin: 0;
-  }
-  .about-text-image-mask {
-    font-size: 4rem;
-    width: 100%;
-  }
-  .row-about {
-    flex-direction: column;
-    padding: 1;
-    margin: 1;
-    padding-top: 1rem;
-  }
-  .image {
-    width: 100%;
-    height: 100%;
-  }
-}
-
-@media (max-width: 490px) {
-  .about-container {
-    height: 100vh;
-  }
-  .about-text-image-mask {
-    font-size: 2.5rem;
-    width: 100%;
-  }
-  .about-text {
-    font-size: 1rem;
-    width: 100%;
-    line-height: normal;
-  }
-}
-
-.about-button {
-  margin: 1rem;
-}
-=======
->>>>>>> origin/contact-refactor
