--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -42,7 +42,7 @@
   font-size: 4rem;
   line-height: 60 px;
   overflow: visible;
-  color: #6f6f6f;
+  color: #fff;
 }
 
 .hero-subtitle {
